Excel Export v0.1, submit button ready to use and other bugfixes & additions

--- a/client/src/components/Dashboard/MainForm/ProductListInput/styles.css
+++ b/client/src/components/Dashboard/MainForm/ProductListInput/styles.css
@@ -1,7 +1,7 @@
-input::-webkit-outer-spin-button,
+/* input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
     -webkit-appearance: none;
-}
+} */
 
 .ui.search.dropdown {
   vertical-align: center;
