--- a/client/src/components/Dashboard/styles.css
+++ b/client/src/components/Dashboard/styles.css
@@ -11,5 +11,10 @@
 
 ::-webkit-scrollbar-thumb
 {
+  background: rgba(127,140,141 ,1);
+}
+
+::-webkit-scrollbar-thumb:hover
+{
   background: rgba(41,128,185 ,1);
 }
