--- a/client/src/components/styles.css
+++ b/client/src/components/styles.css
@@ -14,3 +14,24 @@ body {
   font-size: 64%;
   font-weight: 400;
 }
+
+::-webkit-scrollbar
+{
+  width: 12px;  /* for vertical scrollbars */
+  height: 12px; /* for horizontal scrollbars */
+}
+
+::-webkit-scrollbar-track
+{
+  background: rgba(0, 0, 0, 0.1);
+}
+
+::-webkit-scrollbar-thumb
+{
+  background: rgba(127,140,141 ,1);
+}
+
+::-webkit-scrollbar-thumb:hover
+{
+  background: rgba(41,128,185 ,1);
+}
