--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,20 @@
+html{
+  height: 100%;
+}
+
 body {
+  height: 100%;
+  margin: 0;
+  min-height: 500px;
+  /* Set background image to fixed (don't scroll along with the page) */
+  background-attachment: fixed;
+  /* Center the background image */
+  background-position: center;
+  /* Set the background image to no repeat */
+  background-repeat: no-repeat;
+  /* Scale the background image to be as large as possible */
+  background-size: cover;
+
   /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#dddae5+0,ebe8f2+0,beb7cc+100 */
   background: #dddae5; /* Old browsers */
   background: -moz-linear-gradient(-45deg, #dddae5 0%, #ebe8f2 0%, #beb7cc 100%); /* FF3.6-15 */
